[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/GUI/Menu/vydelenie.png" type="Texture" id=1]
[ext_resource path="res://addons/escape/escape.png" type="Texture" id=2]
[ext_resource path="res://addons/escape/Escape.gd" type="Script" id=3]
[ext_resource path="res://assets/GUI/transparent.png" type="Texture" id=4]
[ext_resource path="res://addons/transit/Transit.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/exit/Exit.tscn" type="PackedScene" id=6]

[sub_resource type="GDScript" id=1]

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform float lod: hint_range(0.0, 5) = 1.0;

void fragment(){
	vec4 color = texture(SCREEN_TEXTURE, SCREEN_UV, lod);
	COLOR = color;
}"
script = SubResource( 1 )

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/lod = 1.0

[node name="Escape" type="Node2D"]
script = ExtResource( 3 )

[node name="Transit" parent="." instance=ExtResource( 5 )]
margin_right = 1002.0
margin_bottom = 574.0

[node name="Overlay" type="CanvasLayer" parent="."]
layer = -1

[node name="Popup" type="Popup" parent="Overlay"]
margin_right = 1000.0
margin_bottom = 574.0
rect_scale = Vector2( 1.9, 1.9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blur" type="Sprite" parent="Overlay/Popup"]
material = SubResource( 3 )
position = Vector2( 842.463, 479.532 )
scale = Vector2( 11.5807, 11.43 )
texture = ExtResource( 4 )

[node name="ExitDialog" parent="Overlay/Popup" instance=ExtResource( 6 )]

[node name="VBoxContainer" type="VBoxContainer" parent="Overlay/Popup"]
margin_right = 1000.0
margin_bottom = 574.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Overlay/Popup/VBoxContainer"]
margin_top = 287.0
margin_right = 1000.0
margin_bottom = 287.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Overlay/Popup/VBoxContainer/HBoxContainer"]
margin_left = 500.0
margin_right = 500.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Sprite" parent="Overlay/Popup/VBoxContainer/HBoxContainer/TextureRect"]
scale = Vector2( 5, 5 )
texture = ExtResource( 2 )

[node name="ContinueButton" type="Button" parent="Overlay/Popup/VBoxContainer/HBoxContainer/TextureRect"]
margin_left = -112.0
margin_top = -103.0
margin_right = 109.0
margin_bottom = -44.0
focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="selected" type="Sprite" parent="Overlay/Popup/VBoxContainer/HBoxContainer/TextureRect/ContinueButton"]
visible = false
position = Vector2( 113.548, 27.6435 )
scale = Vector2( 4.68664, 3.88223 )
texture = ExtResource( 1 )

[node name="MenuButton" type="Button" parent="Overlay/Popup/VBoxContainer/HBoxContainer/TextureRect"]
margin_left = -108.218
margin_top = -29.0
margin_right = 111.782
margin_bottom = 33.0
focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="selected" type="Sprite" parent="Overlay/Popup/VBoxContainer/HBoxContainer/TextureRect/MenuButton"]
visible = false
position = Vector2( 112.209, 30.6312 )
scale = Vector2( 4.71784, 3.60045 )
texture = ExtResource( 1 )

[node name="ExitButton" type="Button" parent="Overlay/Popup/VBoxContainer/HBoxContainer/TextureRect"]
margin_left = -110.0
margin_top = 44.0
margin_right = 110.0
margin_bottom = 109.0
focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="selected" type="Sprite" parent="Overlay/Popup/VBoxContainer/HBoxContainer/TextureRect/ExitButton"]
visible = false
position = Vector2( 110.763, 35.0005 )
scale = Vector2( 4.77166, 4.32591 )
texture = ExtResource( 1 )

[connection signal="pressed" from="Overlay/Popup/VBoxContainer/HBoxContainer/TextureRect/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="Overlay/Popup/VBoxContainer/HBoxContainer/TextureRect/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="Overlay/Popup/VBoxContainer/HBoxContainer/TextureRect/ExitButton" to="." method="_on_ExitButton_pressed"]
